...

object MapTestTags {
  const val GOOGLE_MAP_SCREEN = "mapScreen"
  const val ZOOM_IN_BUTTON = "zoomInButton"
  const val ZOOM_OUT_BUTTON = "zoomOutButton"
  const val ZOOM_LEVEL = "zoomLevel"
  const val DRAG_DOWN_MENU = "dragDownMenu"
  const val DRAG = "drag"
  const val BUTTON_X = "buttonX"
  const val REQUEST_TITLE = "requestTitle"
  const val REQUEST_DESCRIPTION = "requestDescription"
  const val START_DATE = "startDate"
  const val END_DATE = "endDate"
  const val REQUEST_STATUS = "requestStatus"
  const val REQUEST_LOCATION_NAME = "requestLocationName"
  const val BUTTON_DETAILS = "buttonDetails"
  const val PROFILE_NAME = "profileName"
  const val PROFILE_KUDOS = "profileKudos"
  const val PROFILE_KUDOS_TEXT = "profileKudosText"
  const val PROFILE_SECTION = "profileSection"
  const val PROFILE_SECTION_TEXT = "profileSectionText"
  const val PROFILE_CREATION_DATE = "profileCreationDate"
  const val PROFILE_EDIT_BUTTON = "profileEditButton"
  const val MAP_LIST_REQUEST = "mapListRequest"
  const val MAP_FILTER_OWNER = "mapFilterOwner"
  const val MAP_LIST_FILTER = "mapListFilter"

  fun testTagForTab(tab: String): String {
    return "tag${tab}"
  }

...
